infra-modules/vpc/igw.tf
resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id
    tags {
        Name = "${var.env}-igw"
    }
}
